tests/e2e/complex_nested_expression6.error
Error: syntax error in story at line 1, column 1

1|    1 and 2 or 3 and 4 or 5
      ^^^^^^^

E0122: `int` can't be converted to `boolean`
